# TatiGPT

./: .gitignore  .pre-commit-config.yaml  main.py  makefile  pyproject.toml  rxconfig.py
TatiGPT/: TatiGPT.py
TatiGPT/components/: sidebar.py
TatiGPT/components/chat/: chat_input_bar.py  chat_message.py  chat_state.py  chat_thread.py
TatiGPT/pages/: ai_chat.py
config/: llm_client.py  logging.py
