[project]
name = "tatigpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "isort>=6.0.1",
    "litellm>=1.65.4.post1",
    "pre-commit>=4.1.0",
    "reflex>=0.7.1",
    "ruff>=0.9.9",
    "structlog>=25.1.0",
    "together>=1.5.5",
]
